# botstone

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile.toml  README.md  build.rs  docker-compose.yml  make.env  rustfmt.toml  sqlx-data.json
migrations/: 20200910172243_initial_schema.sql  20210204195812_join_roles.sql  20210727205938_Add_permissions_table.sql
proptest-regressions/parsers/: message.txt
scripts/: build_docker.sh  psql.sh  run.sh  test_data.sql
src/: event_handling.rs  macros.rs  main.rs  version_data.rs
src/commands/: admin.rs  config.rs  meta.rs  mod.rs  owner.rs  support.rs
src/database/: queries.rs
src/parsers/: message.rs  permissions.rs
src/structures/: commands.rs  context.rs  errors.rs  mod.rs
src/utils/: channel.rs  defaults.rs  guild.rs  misc.rs  mod.rs  permissions.rs  prompts.rs
