[package]
name = "botstone"
version = "0.1.0"
authors = ["Professor Bloodstone <prof.bloodstone+git@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hex = "0.4"
maplit = "1.0.2"
once_cell = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "signal"] }
tracing = "0.1"
tracing-futures = "0.2" # needed so intrument works with async functions.
tracing-subscriber = "0.2"
unic-emoji-char = "0.9.0"

[dependencies.serenity]
#version = "0.9.0-rc.2"
git = "https://github.com/Prof-Bloodstone/serenity"
branch = "remove_bot_token_from_logs"
default-features = true
features = ["collector", "rustls_backend"]

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "migrate", "offline"]

[dev-dependencies]
cargo-make = "0.32.5"
pretty_assertions = "0.6.1"
proptest = "0.10"
rstest = "0.6.4"

[build-dependencies]
chrono = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
