[package]
name = "botstone"
version = "0.2.0"
authors = ["Professor Bloodstone <prof@bloodstone.dev>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
hex = "0.4"
json5 = "0.3"
maplit = "1.0"
once_cell = "1.4"
serenity_utils = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.2", features = ["macros", "signal"] }
tracing = "0.1"
tracing-futures = "0.2" # needed so instrument works with async functions.
tracing-subscriber = "0.2"
unic-emoji-char = "0.9"
strum = "0.20"
strum_macros = "0.20"

[dependencies.serenity]
default-features = true
features = ["collector", "rustls_backend", "cache"]
version = "0.10"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "migrate", "offline"]

[dev-dependencies]
pretty_assertions = "0.6"
proptest = "0.10"
rstest = "0.6"

[build-dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
