[package]
name = "botstone"
version = "0.2.1"
authors = ["Professor Bloodstone <prof@bloodstone.dev>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
derive-new = "0.5"
dotenv = "0.15"
getset = "0.1"
hex = "0.4"
json5 = "0.3"
maplit = "1.0"
once_cell = "1.4"
serde = { version = "1.0", features = ["derive"] }
serenity_utils = "0.6"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0"
tokio = { version = "1.2", features = ["macros", "signal"] }
tracing = "0.1"
tracing-futures = "0.2" # needed so instrument works with async functions.
tracing-subscriber = "0.2"
unic-emoji-char = "0.9"

[dependencies.serenity]
default-features = true
features = ["collector", "rustls_backend", "cache"]
version = "0.10"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "migrate", "offline"]

[dev-dependencies]
pretty_assertions = "0.6"
proptest = "0.10"
rstest = "0.10"

[build-dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
